--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
   name: git-gateway
+  repo: saloni1990/saloni-portfolio
   branch: master # Branch to update (optional; defaults to master)
 
 media_folder: "/static/images/uploads" # Media files will be stored in the repo under images/uploads
