--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,7 +13,7 @@ collections:
   - name: 'blog'
     label: 'Blog'
     format: 'json'
-    folder: 'assets/content/blog'
+    folder: 'content/blog'
     create: true
     slug: "{{slug}}"
     fields: # The fields for each document, usually in front matter
