--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.12.0",
     "baguettebox.js": "^1.11.1",
     "cloudinary-vue": "^1.1.1",
