--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,14 +10,14 @@ publish_mode: editorial_workflow
 site_url: https://www.sallearnstocode.co.uk
 
 collections:
-  - name: 'blog'
-    label: 'Blog'
+  - name: 'post'
+    label: 'Post'
     format: 'json'
-    folder: 'assets/content/blog'
+    folder: 'content/post'
     create: true
     slug: "{{slug}}"
     fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog", required: false}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post", required: false}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Category", name: "category", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime", required: false}
